--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,25 @@
     <enforceStandards>false</enforceStandards>
     <enforceVersions>false</enforceVersions>
     <enforceTripHazards>false</enforceTripHazards>
+    <jacksonVersion>2.4.1</jacksonVersion>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jacksonVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jacksonVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>${jacksonVersion}</version>
+    </dependency>
     <dependency>
       <groupId>org.commonjava.propulsor</groupId>
       <artifactId>propulsor-core</artifactId>
@@ -39,17 +55,47 @@
       <artifactId>propulsor-resteasy</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>shade-cdi-components</id>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <createDependencyReducedPom>true</createDependencyReducedPom>
+              <keepDependenciesWithProvidedScope>true</keepDependenciesWithProvidedScope>
+              <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+              <!--
+              <relocations>
+                <relocation>
+                  <pattern>org.commonjava.aprox</pattern>
+                  <shadedPattern>org.commonjava.aprox.shaded</shadedPattern>
+                </relocation>
+              </relocations>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+              </transformers>
+              -->
+              <artifactSet>
+                <includes>
+                  <include>org.commonjava*:*</include>
+                </includes>
+                <excludes>
+                  <exclude>org.commonjava.maven.atlas:*</exclude>
+                  <exclude>org.commonjava*:*ftest*</exclude>
+                </excludes>
+              </artifactSet>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
